fix(markdown): improves blockquote contrast

--- a/src/css/component.markdown.css
+++ b/src/css/component.markdown.css
@@ -37,7 +37,7 @@
   }
 
   & blockquote {
-    @apply pl-8 border-l-4 border-gray-300 text-gray-600;
+    @apply pl-8 border-l-4 border-gray-300 text-gray-700;
   }
 
   & pre {
